javali_tests/A3/A4_keinestamSchmid/success/Positive.2.3.17.ASSIGNNULLREFERENCE.javali
//The constant null can be assigned to any reference type.
//rule 2.3.17

class Reference{
	int x;
	int y;
}

class Main {
Reference r;

	void main() {
		r = null;
	}
}