javali_tests/A3/A4_keinestamSchmid/fail/Error.2.3.17.ASSIGNNULL.javali
//The constant null can be assigned to any reference type.
//rule 2.3.17

class Main {
int x;
	void main() {
		x = null;
	}
}